--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -9,23 +9,25 @@
 ; GitHub:       https://github.com/xcession/dotfiles
 ; Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
-;: Global WM settings {{{
+; Global WM settings {{{
+
+; https://github.com/jaagr/polybar/wiki/Configuration#global-wm-settings
 
 [global/wm]
-;https://github.com/jaagr/polybar/wiki/Configuration#global-wm-settings
 margin-top = 0
 margin-bottom = 0
 
 ;: }}}
 
-;: Application settings {{{
+; Application settings {{{
+
+; https://github.com/polybar/polybar/wiki/Configuration#application-settings
 
 [settings]
-;https://github.com/polybar/polybar/wiki/Configuration#application-settings
 throttle-output = 5
 throttle-output-for = 10
 screenchange-reload = true
-compositing-background = over
+compositing-background = source
 compositing-foreground = over
 compositing-overline = over
 compositing-underline = over
@@ -33,39 +35,74 @@ compositing-border = over
 
 ;: }}}
 
-;: Colors {{{
+; Colors {{{
 
 ; ARGB color (e.g. #f00, #ff992a, #ddff1023)
 
 [colors]
+; UMBRA theme ------
 background = #100d23
 background-alt = #1e1d45
 foreground = #00ff9c
 foreground-alt = #918175
+
 primary = #9dff00
-secondary = #00c3ff
+
 alert = #ff0049
-state_good = #009550
-state_degraded = #fcec02
-state_bad = #ff004c
+
+state_low = #009550
+state_mid = #fcec02
+state_hi = #ff0049
+
+black = #000000
+white = #ffffff
 
 ;: }}}
 
-;: Bar settings {{{
+; Bar settings {{{
 
-;https://github.com/polybar/polybar/wiki/Configuration#bar-settings
+; https://github.com/polybar/polybar/wiki/Configuration#bar-settings
 
-[bar/mainbar-i3]
-;monitor = ${env:MONITOR:HDMI-1}
+[bar/i3-primary]
+;{{{
+
+; Use either of the following command to list available outputs:
+; If unspecified, the application will pick the first one it finds.
+; $ polybar -m | cut -d ':' -f 1
+; $ xrandr -q | grep " connected" | cut -d ' ' -f1
+; If no monitor is given, the primary monitor is used if it exists
+monitor =
+
+; Put the bar at the bottom of the screen
+bottom = false
+
+; Prefer fixed center position for the `modules-center` block.
+; The center block will stay in the middle of the bar whenever
+; possible. It can still be pushed around if other blocks need
+; more space.
+; When false, the center block is centered in the space between
+; the left and right block.
 fixed-center = false
+
+; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
+; the percentage can optionally be extended with a pixel offset like so:
+; 50%:-10, this will result in a width or height of 50% minus 10 pixels
 width = 100%
 height = 20
-;offset-x = 1%
-;offset-y = 1%
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
+; Background gradient (vertical steps)
+;   background-[0-9]+ = #aarrggbb
+; background-0 =
+
+; Value used for drawing rounded corners
+; Note: This shouldn't be used together with border-size because the border
+; doesn't get rounded. For this to work you may also need to enable
+; pseudo-transparency or use a compositor like compton.
+; Individual values can be defined using:
+;   radius-{top,bottom}
 radius = 0.0
 
 ; Under-/overline pixel size and argb color
@@ -73,10 +110,10 @@ radius = 0.0
 ;   {overline,underline}-size
 ;   {overline,underline}-color
 line-size = 2
-line-color = #000000
+line-color = #f00
 
-border-size = 0
-border-color = ${colors.primary}
+border-size =
+border-color =
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
@@ -86,17 +123,18 @@ padding = 0
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 1
-module-margin-right = 1
+module-margin = 0
 
 ; font-N = <fontconfig pattern>;<vertical offset>
-font-0 = "Cozette:style=Regular:antialias=false:pixelsize=8;1"
+font-0 = "Noto Sans:style=Regular:antialias=true:pixelsize=9;2"
+font-1 = "Unifont:style=Regular:antialias=true:pixelsize=11;3"
+font-2 = "FontAwesome:style=Regular:antialias=true:pixelsize=11;2"
 
 modules-left = i3 xwindow
 modules-center =
-modules-right = filesystem cpu memory temperature pulseaudio backlight wlan eth battery xkeyboard date
+modules-right = filesystem cpu memory temperature pulseaudio backlight wlan eth battery xkeyboard date powermenu
 
-; separator = |
+separator =
 
 ; Position of the system tray window
 ; If empty or undefined, tray support will be disabled
@@ -109,15 +147,31 @@ modules-right = filesystem cpu memory temperature pulseaudio backlight wlan eth 
 ;   none
 tray-position = right
 tray-maxsize = 20
-tray-background = ${colors.background}
+tray-background = ${root.background}
+tray-offset-x = 0
+tray-offset-y = 0
 tray-padding = 4
 tray-scale = 1.0
 
-cursor-click =
-cursor-scroll =
+; If true, the bar will not shift its
+; contents when the tray changes
+tray-detached = false
 
-[bar/altbar-i3]
-monitor = DP1
+; Requires polybar to be built with xcursor support (xcb-util-cursor)
+; Possible values are:
+; - default   : The default pointer as before, can also be an empty string (default)
+; - pointer   : Typically in the form of a hand
+; - ns-resize : Up and down arrows, can be used to indicate scrolling
+cursor-click = pointer
+cursor-scroll = ns-scroll
+
+;}}}
+
+[bar/i3-secondary]
+;{{{
+
+monitor = HDMI-A-1
+bottom = false
 fixed-center = false
 width = 100%
 height = 20
@@ -128,30 +182,35 @@ foreground = ${colors.foreground}
 radius = 0.0
 
 line-size = 2
-line-color = #000000
+line-color = #f00
 
-border-size = 0
-border-color = ${colors.primary}
+border-size =
+border-color =
 
 padding = 0
 
-module-margin-left = 1
-module-margin-right = 1
+module-margin = 0
 
-font-0 = "Cozette:style=Regular:antialias=false:pixelsize=8;1"
+font-0 = "Noto Sans:style=Regular:antialias=true:pixelsize=9;2"
+font-1 = "Unifont:style=Regular:antialias=true:pixelsize=11;3"
+font-2 = "FontAwesome:style=Regular:antialias=true:pixelsize=11;2"
 
 modules-left = i3 xwindow
 modules-center =
-modules-right = xkeyboard date
+modules-right = xkeyboard date powermenu
 
-cursor-click =
-cursor-scroll =
+separator =
+
+cursor-click = pointer
+cursor-scroll = ns-scroll
+
+;}}}
 
 ;: }}}
 
-;: Modules {{{
+; Modules {{{
 
-;: Define fallback values used by all module formats
+; Define fallback values used by all module formats
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 format-underline =
@@ -163,6 +222,8 @@ format-offset =
 
 [module/alsa]
 ;https://github.com/polybar/polybar/wiki/Module:-alsa
+;{{{
+
 type = internal/alsa
 
 format-volume = <label-volume> <bar-volume>
@@ -185,16 +246,20 @@ bar-volume-foreground-4 = ${colors.state_good}
 bar-volume-foreground-5 = ${colors.state_degraded}
 bar-volume-foreground-6 = ${colors.state_bad}
 bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 1
-bar-volume-fill = ─
-bar-volume-fill-font = 1
-bar-volume-empty = ─
-bar-volume-empty-font = 1
+bar-volume-indicator = █
+bar-volume-indicator-font = 0
+bar-volume-fill = ┄
+bar-volume-fill-font = 0
+bar-volume-empty = ┄
+bar-volume-empty-font = 0
 bar-volume-empty-foreground = ${colors.background-alt}
+
+;}}}
 
 [module/backlight]
 ;https://github.com/polybar/polybar/wiki/Module:-xbacklight
+;{{{
+
 inherit = module/xbacklight
 type = internal/backlight
 
@@ -203,8 +268,12 @@ type = internal/backlight
 ; card = acpi_video0
 card = intel_backlight
 
+;}}}
+
 [module/battery]
 ;https://github.com/polybar/polybar/wiki/Module:-battery
+;{{{
+
 type = internal/battery
 
 battery = BAT0
@@ -249,8 +318,12 @@ animation-discharging-4 = 
 animation-discharging-foreground = ${colors.state_degraded}
 animation-discharging-framerate = 750
 
+;}}}
+
 [module/bspwm]
 ;https://github.com/polybar/polybar/wiki/Module:-bspwm
+;{{{
+
 type = internal/bspwm
 
 label-focused = %index%
@@ -272,12 +345,18 @@ label-empty-padding = 2
 ; Separator in between workspaces
 ; label-separator = |
 
+;}}}
+
 [module/cpu]
 ;https://github.com/polybar/polybar/wiki/Module:-cpu
+;{{{
+
 type = internal/cpu
 interval = 2
 
 format = <ramp-coreload> <label>
+
+format-padding = 2
 
 label = %percentage:2%%
 
@@ -291,11 +370,14 @@ ramp-coreload-6 = ▇
 ramp-coreload-7 = █
 ramp-coreload-foreground = ${colors.primary}
 
+;}}}
+
 [module/date]
 ;https://github.com/polybar/polybar/wiki/Module:-date
+;{{{
+
 type = internal/date
 interval = 1
-
 date =
 date-alt = %a %d %b, %Y
 
@@ -304,30 +386,43 @@ time-alt = %H:%M:%S
 
 format = <label>
 
+format-padding = 2
 format-prefix = " "
-format-prefix-font = 0
 
 label = %date% %time%
 
+;}}}
+
 [module/eth]
 ;https://github.com/polybar/polybar/wiki/Module:-network
+;{{{
+
 type = internal/network
-interface = enp0s25
+; Name of the network interface to display. You can get the names of the
+; interfaces on your machine with `ip link`
+; interface = enp0s25
+interface = enp3s0
 interval = 3.0
 
 format-connected = <label-connected>
-; format-connected-underline = ${colors.secondary}
 
-label-connected =  %local_ip%
+format-connected-padding = 2
+
+label-connected =  %local_ip%
 
 format-disconnected = <label-disconnected>
-; format-disconnected-underline = ${colors.state_bad}
 
-label-disconnected =  down
+format-disconnected-padding = 2
+
+label-disconnected =  down
 label-disconnected-foreground = ${colors.foreground-alt}
+
+;}}}
 
 [module/filesystem]
 ;https://github.com/polybar/polybar/wiki/Module:-filesystem
+;{{{
+
 type = internal/fs
 interval = 30
 
@@ -348,11 +443,15 @@ label-mounted-foreground = ${colors.foreground}
 label-unmounted = %free%
 label-unmounted-foreground = ${colors.foreground-alt}
 
+;}}}
+
 [module/i3]
 ;https://github.com/jaagr/polybar/wiki/Module:-i3
+;{{{
+
 type = internal/i3
 
-; Only show workspaces on the same output as the bar
+; Only show workspaces defined on the same output as the bar
 pin-workspaces = true
 
 index-sort = true
@@ -386,24 +485,27 @@ label-urgent-padding = 2
 ; Separator in between workspaces
 ; label-separator = |
 
+;}}}
+
 [module/memory]
 ;https://github.com/polybar/polybar/wiki/Module:-memory
+;{{{
+
 type = internal/memory
 interval = 3
 
 format = <label>
 
+format-padding = 2
+
 label =  %percentage_used%%
 
-; bar-used-indicator =
-; bar-used-width = 10
-; bar-used-foreground-0 = ${colors.primary}
-; bar-used-fill = 
-; bar-used-empty = 
-; bar-used-empty-foreground = ${colors.background-alt}
+;}}}
 
 [module/mpd]
 ;https://github.com/polybar/polybar/wiki/Module:-mpd
+;{{{
+
 type = internal/mpd
 
 format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
@@ -417,81 +519,114 @@ icon-next = ⏭
 label-song-maxlen = 25
 label-song-ellipsis = true
 
+;}}}
+
 [module/powermenu]
 ;https://github.com/polybar/polybar/wiki/Module:-menu
+;{{{
+
 type = custom/menu
 
 expand-right = false
 
-format-background = ${colors.background-alt}
+label-open = 
+label-open-foreground = ${colors.foreground}
+label-open-padding = 2
+label-close = 
+label-close-foreground = ${colors.foreground-alt}
+label-close-padding = 2
 
-label-open =  power
-label-open-foreground = ${colors.secondary}
-label-close =  power
-label-close-foreground = ${colors.secondary}
-label-close-underline = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
-
-menu-0-0 = reboot
+menu-0-0 = Reboot
+menu-0-0-background = ${colors.foreground-alt}
+menu-0-0-foreground = ${colors.black}
+menu-0-0-padding = 2
 menu-0-0-exec = menu-open-1
-menu-0-1 = power off
+
+menu-0-1 = Power Off
+menu-0-1-background = ${colors.alert}
+menu-0-1-foreground = ${colors.white}
+menu-0-1-padding = 2
 menu-0-1-exec = menu-open-2
 
-menu-1-0 = cancel
+menu-1-0 = Cancel
+menu-1-0-padding = 2
 menu-1-0-exec = menu-open-0
-menu-1-1 = reboot
+
+menu-1-1 = Reboot
+menu-1-1-padding = 2
+menu-1-1-background = ${colors.foreground-alt}
+menu-1-1-foreground = ${colors.black}
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = power off
+menu-2-0 = Power Off
+menu-2-0-background = ${colors.alert}
+menu-2-0-foreground = ${colors.white}
+menu-2-0-padding = 2
 menu-2-0-exec = sudo poweroff
-menu-2-1 = cancel
+
+menu-2-1 = Cancel
+menu-2-1-padding = 2
 menu-2-1-exec = menu-open-0
 
+;}}}
+
 [module/pulseaudio]
+; https://github.com/polybar/polybar/wiki/Module:-pulseaudio
+;{{{
+
 type = internal/pulseaudio
 
-format-volume = <label-volume> <bar-volume>
+format-volume = <ramp-volume><label-volume><bar-volume>
 
-label-volume =  %percentage%%
+format-volume-padding = 2
+
+label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
+label-volume-padding = 2
 
 label-muted =  muted
-label-muted-foreground = ${colors.background}
+label-muted-foreground = ${colors.white}
 label-muted-background = ${colors.alert}
-label-muted-padding = 1
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 bar-volume-width = 6
-bar-volume-foreground-0 = ${colors.state_good}
-bar-volume-foreground-1 = ${colors.state_good}
-bar-volume-foreground-2 = ${colors.state_good}
-bar-volume-foreground-3 = ${colors.state_good}
-bar-volume-foreground-4 = ${colors.state_good}
-bar-volume-foreground-5 = ${colors.state_degraded}
-bar-volume-foreground-6 = ${colors.state_bad}
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 0
-bar-volume-fill = ─
-bar-volume-fill-font = 0
-bar-volume-empty = ─
-bar-volume-empty-font = 0
+bar-volume-foreground-0 = ${colors.state_low}
+bar-volume-foreground-1 = ${colors.state_low}
+bar-volume-foreground-2 = ${colors.state_low}
+bar-volume-foreground-3 = ${colors.state_low}
+bar-volume-foreground-4 = ${colors.state_mid}
+bar-volume-foreground-5 = ${colors.state_mid}
+bar-volume-foreground-6 = ${colors.state_hi}
+bar-volume-empty = ━
 bar-volume-empty-foreground = ${colors.background-alt}
+bar-volume-fill = ━
+bar-volume-indicator = ┃
+bar-volume-indicator-foreground = ${colors.primary}
+bar-volume-gradient = false
+
+;}}}
 
 [module/temperature]
-;https://github.com/polybar/polybar/wiki/Module:-temperature
+; https://github.com/polybar/polybar/wiki/Module:-temperature
+;{{{
+
 type = internal/temperature
-thermal-zone = 0
+thermal-zone = 2
 warn-temperature = 70
 
-format = <ramp> <label>
+format = <ramp><label>
 format-warn = <label-warn>
 
-format-warn-underline = ${colors.state_bad}
+format-padding = 2
+
+format-warn-underline = ${colors.state_hi}
 
 label = %temperature-c%
 label-warn =  %temperature-c%
-label-warn-foreground = ${colors.state_bad}
+label-warn-foreground = ${colors.state_hi}
 
 ramp-0 = 
 ramp-1 = 
@@ -499,18 +634,23 @@ ramp-2 = 
 ramp-3 = 
 ramp-4 = 
 
+;}}}
+
 [module/wlan]
+; https://github.com/polybar/polybar/wiki/Module:-network
+;{{{
+
 type = internal/network
+; Name of the network interface to display. You can get the names of the
+; interfaces on your machine with `ip link`
 interface = wlp3s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-; format-connected-underline = ${colors.primary}
 
 label-connected =  %essid%
 
 format-disconnected = <label-disconnected>
-; format-disconnected-underline = ${colors.state_bad}
 
 label-disconnected =  down
 ; label-disconnected-foreground = ${colors.foreground-alt}
@@ -525,43 +665,58 @@ ramp-signal-6 = ▇
 ramp-signal-7 = █
 ramp-signal-foreground = ${colors.primary}
 
+;}}}
+
 [module/xbacklight]
-;https://github.com/polybar/polybar/wiki/Module:-backlight
+; https://github.com/polybar/polybar/wiki/Module:-backlight
+;{{{
+
 type = internal/xbacklight
 
-format = <label> <bar>
+format = <label><bar>
 
-label =  %percentage%
+format-prefix = " "
+
+label = %percentage%
 
 bar-width = 6
 bar-indicator = |
 bar-indicator-foreground = ${colors.foreground-alt}
-bar-indicator-font = 0
 bar-fill = ─
-bar-fill-font = 0
 bar-fill-foreground = ${colors.primary}
 bar-empty = ─
-bar-empty-font = 0
 bar-empty-foreground = ${colors.background-alt}
 
+;}}}
+
 [module/xkeyboard]
-;https://github.com/polybar/polybar/wiki/Module:-xkeyboard
+; https://github.com/polybar/polybar/wiki/Module:-xkeyboard
+;{{{
+
 type = internal/xkeyboard
 blacklist-0 = num lock
+blacklist-1 = scroll lock
 
 format = <label-layout><label-indicator>
 
-label-layout = %name%
-label-layout-padding = 1
-label-layout-background = ${colors.background-alt}
+format-padding = 2
+format-prefix = " "
 
-label-indicator-padding = 1
-label-indicator-foreground = ${colors.background}
+label-layout = %name%
+
+label-indicator-foreground = ${colors.white}
 label-indicator-background = ${colors.alert}
+label-indicator-padding = 2
+
+;}}}
 
 [module/xwindow]
+;{{{
+
 type = internal/xwindow
 label = %title:0:30:...%
+
+;}}}
 
 ;: }}}
 
